# SDL3GL

./: .gitmodules  CMakeLists.txt  README.md
assets/shaders/: Basic.frag  Basic.vert
demo/: CMakeLists.txt  main.cpp
engine/: CMakeLists.txt
engine/core/: CMakeLists.txt
engine/core/common/: CMakeLists.txt  FileUtil.cpp  FileUtil.hpp  FpsCounter.cpp  FpsCounter.hpp  OpenGlUtil.cpp  OpenGlUtil.hpp
engine/core/graphics/: CMakeLists.txt  ElementBuffer.cpp  ElementBuffer.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferElement.cpp  VertexBufferElement.hpp  VertexBufferLayout.cpp  VertexBufferLayout.hpp  VertexBufferLayoutElement.hpp  Window.cpp  Window.hpp
engine/core/input/: CMakeLists.txt  InputManager.cpp  InputManager.hpp
engine/core/resources/: CMakeLists.txt  TextureAtlas.cpp  TextureAtlas.hpp
engine/runtime/: CMakeLists.txt
engine/runtime/system/: CMakeLists.txt  Engine.cpp  Engine.hpp
engine/system/: CMakeLists.txt  Engine.cpp  Engine.h  Engine.hpp
